// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useRenderLoop – Charakterisierung > Aufnahme ohne Workspace 1`] = `
[
  "cm.isRecording= true",
  "cm.drawScene <rec.ctx>",
  "cm.isRecording= false",
  "mim.drawImages <rec.ctx> {"behindVisualizer":true}",
  "mim.drawImages <rec.ctx> {"behindVisualizer":false}",
  "video.drawVideos <rec.ctx>",
  "text.draw <rec.ctx> 200 100",
  "audioFx.render <rec.ctx> 200 100 {"fx":1}",
  "beatDrop.render <rec.ctx> 200 100 {"bd":1}",
  "ticker.render <rec.ctx> 200 100 {"tk":1}",
  "marker.render <rec.ctx> 200 100 rec",
  "--- frame 1",
  "raf",
  "player.notifyFrame",
  "main.clearRect 0 0 400 200",
  "updateGlobalAudioData u8[8:724] 8",
  "worker.init 400 200",
  "worker.cleanupState",
  "viz.bars.init 400 200",
  "worker.resize 400 200",
  "c1.clearRect 0 0 400 200",
  "c1.save",
  "c1.globalAlpha= 0.7",
  "viz.bars.draw <c1.ctx> u8[8:724] 8 400 200 #ff0000 0.9 null undef {"enabled":false,"strength":50} 16.6667",
  "store.markWorking bars",
  "c1.restore",
  "cm.drawScene <main.ctx>",
  "mim.drawImages <main.ctx> {"behindVisualizer":true}",
  "c2.clearRect 0 0 400 200",
  "c2.drawImage <c1> 0 0 400 200",
  "c2.save",
  "c2.globalCompositeOperation= destination-in",
  "c2.createLinearGradient 0 0 400 0",
  "c2.createLinearGradient#2.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#2.addColorStop 0.06 rgba(0,0,0,1)",
  "c2.createLinearGradient#2.addColorStop 0.94 rgba(0,0,0,1)",
  "c2.createLinearGradient#2.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#2>",
  "c2.fillRect 0 0 400 200",
  "c2.createLinearGradient 0 0 0 200",
  "c2.createLinearGradient#3.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#3.addColorStop 0.12 rgba(0,0,0,1)",
  "c2.createLinearGradient#3.addColorStop 0.88 rgba(0,0,0,1)",
  "c2.createLinearGradient#3.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#3>",
  "c2.fillRect 0 0 400 200",
  "c2.restore",
  "main.drawImage <c2> 0 0 400 200 40 20 320 160",
  "mim.drawImages <main.ctx> {"behindVisualizer":false}",
  "video.drawVideos <main.ctx>",
  "text.draw <main.ctx> 400 200",
  "audioFx.render <main.ctx> 400 200 {"fx":1}",
  "beatDrop.render <main.ctx> 400 200 {"bd":1}",
  "ticker.render <main.ctx> 400 200 {"tk":1}",
  "marker.render <main.ctx> 400 200 live",
  "c4.drawImage <main> 0 0",
  "cm.drawFadedTextMarkers <main.ctx>",
  "cm.drawInteractiveElements <main.ctx>",
  "cm.drawWorkspaceOutline <main.ctx>",
  "cm.drawTextSelectionRect <main.ctx>",
  "cm.drawTextPositionPreview <main.ctx>",
  "grid.drawGrid <main.ctx>",
  "rec.clearRect 0 0 200 100",
  "rec.drawImage <c4> 0 0 200 100",
]
`;

exports[`useRenderLoop – Charakterisierung > Aufnahme: Live-Snapshot, Redraw (schnell + Fallback), verstecktes Dokument 1`] = `
[
  "c1.clearRect 0 0 400 200",
  "cm.isRecording= true",
  "cm.drawScene <c1.ctx>",
  "cm.isRecording= false",
  "mim.drawImages <c1.ctx> {"behindVisualizer":true}",
  "mim.drawImages <c1.ctx> {"behindVisualizer":false}",
  "video.drawVideos <c1.ctx>",
  "text.draw <c1.ctx> 400 200",
  "rec.clearRect 0 0 200 100",
  "rec.drawImage <c1> 100 50 200 100 0 0 200 100",
  "audioFx.render <rec.ctx> 200 100 {"fx":1}",
  "beatDrop.render <rec.ctx> 200 100 {"bd":1}",
  "ticker.render <rec.ctx> 200 100 {"tk":1}",
  "marker.render <rec.ctx> 200 100 rec",
  "--- frame 1",
  "raf",
  "player.notifyFrame",
  "main.clearRect 0 0 400 200",
  "updateGlobalAudioData u8[8:724] 8",
  "worker.init 400 200",
  "worker.cleanupState",
  "viz.bars.init 400 200",
  "worker.resize 400 200",
  "c2.clearRect 0 0 400 200",
  "c2.save",
  "c2.globalAlpha= 0.7",
  "viz.bars.draw <c2.ctx> u8[8:724] 8 400 200 #ff0000 0.9 null undef {"enabled":false,"strength":50} 16.6667",
  "store.markWorking bars",
  "c2.restore",
  "cm.drawScene <main.ctx>",
  "mim.drawImages <main.ctx> {"behindVisualizer":true}",
  "c2.clearRect 0 0 400 200",
  "c2.drawImage <c2> 0 0 400 200",
  "c2.save",
  "c2.globalCompositeOperation= destination-in",
  "c2.createLinearGradient 0 0 400 0",
  "c2.createLinearGradient#3.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#3.addColorStop 0.06 rgba(0,0,0,1)",
  "c2.createLinearGradient#3.addColorStop 0.94 rgba(0,0,0,1)",
  "c2.createLinearGradient#3.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#3>",
  "c2.fillRect 0 0 400 200",
  "c2.createLinearGradient 0 0 0 200",
  "c2.createLinearGradient#4.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#4.addColorStop 0.12 rgba(0,0,0,1)",
  "c2.createLinearGradient#4.addColorStop 0.88 rgba(0,0,0,1)",
  "c2.createLinearGradient#4.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#4>",
  "c2.fillRect 0 0 400 200",
  "c2.restore",
  "main.drawImage <c2> 0 0 400 200 40 20 320 160",
  "mim.drawImages <main.ctx> {"behindVisualizer":false}",
  "video.drawVideos <main.ctx>",
  "text.draw <main.ctx> 400 200",
  "audioFx.render <main.ctx> 400 200 {"fx":1}",
  "beatDrop.render <main.ctx> 400 200 {"bd":1}",
  "ticker.render <main.ctx> 400 200 {"tk":1}",
  "marker.render <main.ctx> 400 200 live",
  "c5.drawImage <main> 0 0",
  "cm.drawFadedTextMarkers <main.ctx>",
  "cm.drawInteractiveElements <main.ctx>",
  "cm.drawWorkspaceOutline <main.ctx>",
  "cm.drawTextSelectionRect <main.ctx>",
  "cm.drawTextPositionPreview <main.ctx>",
  "grid.drawGrid <main.ctx>",
  "rec.clearRect 0 0 200 100",
  "rec.drawImage <c5> 100 50 200 100 0 0 200 100",
  "--- frame 2",
  "player.notifyFrame",
  "main.clearRect 0 0 400 200",
  "updateGlobalAudioData u8[8:972] 8",
  "c2.clearRect 0 0 400 200",
  "c2.save",
  "c2.globalAlpha= 0.7",
  "viz.bars.draw <c2.ctx> u8[8:972] 8 400 200 #ff0000 0.9 null undef {"enabled":false,"strength":50} 16.6667",
  "store.markWorking bars",
  "c2.restore",
  "cm.drawScene <main.ctx>",
  "mim.drawImages <main.ctx> {"behindVisualizer":true}",
  "c2.clearRect 0 0 400 200",
  "c2.drawImage <c2> 0 0 400 200",
  "c2.save",
  "c2.globalCompositeOperation= destination-in",
  "c2.createLinearGradient 0 0 400 0",
  "c2.createLinearGradient#6.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#6.addColorStop 0.06 rgba(0,0,0,1)",
  "c2.createLinearGradient#6.addColorStop 0.94 rgba(0,0,0,1)",
  "c2.createLinearGradient#6.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#6>",
  "c2.fillRect 0 0 400 200",
  "c2.createLinearGradient 0 0 0 200",
  "c2.createLinearGradient#7.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#7.addColorStop 0.12 rgba(0,0,0,1)",
  "c2.createLinearGradient#7.addColorStop 0.88 rgba(0,0,0,1)",
  "c2.createLinearGradient#7.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#7>",
  "c2.fillRect 0 0 400 200",
  "c2.restore",
  "main.drawImage <c2> 0 0 400 200 40 20 320 160",
  "mim.drawImages <main.ctx> {"behindVisualizer":false}",
  "video.drawVideos <main.ctx>",
  "text.draw <main.ctx> 400 200",
  "audioFx.render <main.ctx> 400 200 {"fx":1}",
  "beatDrop.render <main.ctx> 400 200 {"bd":1}",
  "ticker.render <main.ctx> 400 200 {"tk":1}",
  "marker.render <main.ctx> 400 200 live",
  "c5.drawImage <main> 0 0",
  "cm.drawFadedTextMarkers <main.ctx>",
  "cm.drawInteractiveElements <main.ctx>",
  "cm.drawWorkspaceOutline <main.ctx>",
  "cm.drawTextSelectionRect <main.ctx>",
  "cm.drawTextPositionPreview <main.ctx>",
  "grid.drawGrid <main.ctx>",
  "cancelRaf 1",
  "--- frame 3",
  "raf",
  "player.notifyFrame",
  "main.clearRect 0 0 400 200",
  "updateGlobalAudioData u8[8:1220] 8",
  "c2.clearRect 0 0 400 200",
  "c2.save",
  "c2.globalAlpha= 0.7",
  "viz.bars.draw <c2.ctx> u8[8:1220] 8 400 200 #ff0000 0.9 null undef {"enabled":false,"strength":50} 16.6667",
  "store.markWorking bars",
  "c2.restore",
  "cm.drawScene <main.ctx>",
  "mim.drawImages <main.ctx> {"behindVisualizer":true}",
  "c2.clearRect 0 0 400 200",
  "c2.drawImage <c2> 0 0 400 200",
  "c2.save",
  "c2.globalCompositeOperation= destination-in",
  "c2.createLinearGradient 0 0 400 0",
  "c2.createLinearGradient#8.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#8.addColorStop 0.06 rgba(0,0,0,1)",
  "c2.createLinearGradient#8.addColorStop 0.94 rgba(0,0,0,1)",
  "c2.createLinearGradient#8.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#8>",
  "c2.fillRect 0 0 400 200",
  "c2.createLinearGradient 0 0 0 200",
  "c2.createLinearGradient#9.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#9.addColorStop 0.12 rgba(0,0,0,1)",
  "c2.createLinearGradient#9.addColorStop 0.88 rgba(0,0,0,1)",
  "c2.createLinearGradient#9.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#9>",
  "c2.fillRect 0 0 400 200",
  "c2.restore",
  "main.drawImage <c2> 0 0 400 200 40 20 320 160",
  "mim.drawImages <main.ctx> {"behindVisualizer":false}",
  "video.drawVideos <main.ctx>",
  "text.draw <main.ctx> 400 200",
  "audioFx.render <main.ctx> 400 200 {"fx":1}",
  "beatDrop.render <main.ctx> 400 200 {"bd":1}",
  "ticker.render <main.ctx> 400 200 {"tk":1}",
  "marker.render <main.ctx> 400 200 live",
  "cm.drawFadedTextMarkers <main.ctx>",
  "cm.drawInteractiveElements <main.ctx>",
  "cm.drawWorkspaceOutline <main.ctx>",
  "cm.drawTextSelectionRect <main.ctx>",
  "cm.drawTextPositionPreview <main.ctx>",
  "grid.drawGrid <main.ctx>",
]
`;

exports[`useRenderLoop – Charakterisierung > Beat-Punch-Variation je Spalte 1`] = `
[
  "--- frame 1",
  "raf",
  "player.notifyFrame",
  "main.clearRect 0 0 400 200",
  "updateGlobalAudioData u8[8:724] 8",
  "worker.init 400 200",
  "worker.cleanupState",
  "viz.bars.init 400 200",
  "worker.resize 400 200",
  "c1.clearRect 0 0 400 200",
  "c1.save",
  "c1.globalAlpha= 0.7",
  "viz.bars.draw <c1.ctx> u8[8:724] 8 400 200 #ff0000 0.9 null undef {"enabled":false,"strength":50} 16.6667",
  "store.markWorking bars",
  "c1.restore",
  "cm.drawScene <main.ctx>",
  "mim.drawImages <main.ctx> {"behindVisualizer":true}",
  "main.save",
  "main.translate 200 100",
  "main.scale 1.06 1.06",
  "main.translate -200 -100",
  "c2.clearRect 0 0 400 200",
  "c2.drawImage <c1> 0 0 400 200",
  "c2.save",
  "c2.globalCompositeOperation= destination-in",
  "c2.createLinearGradient 0 0 400 0",
  "c2.createLinearGradient#2.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#2.addColorStop 0.06 rgba(0,0,0,1)",
  "c2.createLinearGradient#2.addColorStop 0.94 rgba(0,0,0,1)",
  "c2.createLinearGradient#2.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#2>",
  "c2.fillRect 0 0 400 200",
  "c2.createLinearGradient 0 0 0 200",
  "c2.createLinearGradient#3.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#3.addColorStop 0.12 rgba(0,0,0,1)",
  "c2.createLinearGradient#3.addColorStop 0.88 rgba(0,0,0,1)",
  "c2.createLinearGradient#3.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#3>",
  "c2.fillRect 0 0 400 200",
  "c2.restore",
  "main.drawImage <c2> 0 0 400 200 40 20 320 160",
  "main.restore",
  "mim.drawImages <main.ctx> {"behindVisualizer":false}",
  "video.drawVideos <main.ctx>",
  "text.draw <main.ctx> 400 200",
  "audioFx.render <main.ctx> 400 200 {"fx":1}",
  "beatDrop.render <main.ctx> 400 200 {"bd":1}",
  "ticker.render <main.ctx> 400 200 {"tk":1}",
  "marker.render <main.ctx> 400 200 live",
  "cm.drawFadedTextMarkers <main.ctx>",
  "cm.drawInteractiveElements <main.ctx>",
  "cm.drawWorkspaceOutline <main.ctx>",
  "cm.drawTextSelectionRect <main.ctx>",
  "cm.drawTextPositionPreview <main.ctx>",
  "grid.drawGrid <main.ctx>",
  "--- frame 2",
  "raf",
  "player.notifyFrame",
  "main.clearRect 0 0 400 200",
  "updateGlobalAudioData u8[8:972] 8",
  "c1.clearRect 0 0 400 200",
  "c1.save",
  "c1.globalAlpha= 0.7",
  "viz.bars.draw <c1.ctx> u8[8:972] 8 400 200 #ff0000 0.9 null undef {"enabled":false,"strength":50} 16",
  "store.markWorking bars",
  "c1.restore",
  "cm.drawScene <main.ctx>",
  "mim.drawImages <main.ctx> {"behindVisualizer":true}",
  "c4.clearRect 0 0 400 200",
  "c5.clearRect 0 0 400 200",
  "c5.save",
  "c5.translate 50 100",
  "c5.scale 1.0629 1.0629",
  "c5.translate -50 -100",
  "c2.clearRect 0 0 400 200",
  "c2.drawImage <c1> 0 0 400 200",
  "c2.save",
  "c2.globalCompositeOperation= destination-in",
  "c2.createLinearGradient 0 0 400 0",
  "c2.createLinearGradient#6.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#6.addColorStop 0.06 rgba(0,0,0,1)",
  "c2.createLinearGradient#6.addColorStop 0.94 rgba(0,0,0,1)",
  "c2.createLinearGradient#6.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#6>",
  "c2.fillRect 0 0 400 200",
  "c2.createLinearGradient 0 0 0 200",
  "c2.createLinearGradient#7.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#7.addColorStop 0.12 rgba(0,0,0,1)",
  "c2.createLinearGradient#7.addColorStop 0.88 rgba(0,0,0,1)",
  "c2.createLinearGradient#7.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#7>",
  "c2.fillRect 0 0 400 200",
  "c2.restore",
  "c5.drawImage <c2> 0 0 400 200 40 20 320 160",
  "c5.restore",
  "c5.createLinearGradient 0 0 400 0",
  "c5.createLinearGradient#8.addColorStop 0 rgba(0,0,0,1)",
  "c5.createLinearGradient#8.addColorStop 0.1875 rgba(0,0,0,1)",
  "c5.createLinearGradient#8.addColorStop 0.3125 rgba(0,0,0,0)",
  "c5.createLinearGradient#8.addColorStop 1 rgba(0,0,0,0)",
  "c5.save",
  "c5.globalCompositeOperation= destination-in",
  "c5.fillStyle= <c5.createLinearGradient#8>",
  "c5.fillRect 0 0 400 200",
  "c5.restore",
  "c4.save",
  "c4.globalCompositeOperation= lighter",
  "c4.drawImage <c5> 0 0",
  "c4.restore",
  "c5.clearRect 0 0 400 200",
  "c5.save",
  "c5.translate 150 100",
  "c5.scale 1 1",
  "c5.translate -150 -100",
  "c2.clearRect 0 0 400 200",
  "c2.drawImage <c1> 0 0 400 200",
  "c2.save",
  "c2.globalCompositeOperation= destination-in",
  "c2.createLinearGradient 0 0 400 0",
  "c2.createLinearGradient#9.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#9.addColorStop 0.06 rgba(0,0,0,1)",
  "c2.createLinearGradient#9.addColorStop 0.94 rgba(0,0,0,1)",
  "c2.createLinearGradient#9.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#9>",
  "c2.fillRect 0 0 400 200",
  "c2.createLinearGradient 0 0 0 200",
  "c2.createLinearGradient#10.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#10.addColorStop 0.12 rgba(0,0,0,1)",
  "c2.createLinearGradient#10.addColorStop 0.88 rgba(0,0,0,1)",
  "c2.createLinearGradient#10.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#10>",
  "c2.fillRect 0 0 400 200",
  "c2.restore",
  "c5.drawImage <c2> 0 0 400 200 40 20 320 160",
  "c5.restore",
  "c5.createLinearGradient 0 0 400 0",
  "c5.createLinearGradient#11.addColorStop 0 rgba(0,0,0,0)",
  "c5.createLinearGradient#11.addColorStop 0.1875 rgba(0,0,0,0)",
  "c5.createLinearGradient#11.addColorStop 0.3125 rgba(0,0,0,1)",
  "c5.createLinearGradient#11.addColorStop 0.4375 rgba(0,0,0,1)",
  "c5.createLinearGradient#11.addColorStop 0.5625 rgba(0,0,0,0)",
  "c5.createLinearGradient#11.addColorStop 1 rgba(0,0,0,0)",
  "c5.save",
  "c5.globalCompositeOperation= destination-in",
  "c5.fillStyle= <c5.createLinearGradient#11>",
  "c5.fillRect 0 0 400 200",
  "c5.restore",
  "c4.save",
  "c4.globalCompositeOperation= lighter",
  "c4.drawImage <c5> 0 0",
  "c4.restore",
  "c5.clearRect 0 0 400 200",
  "c5.save",
  "c5.translate 250 100",
  "c5.scale 1.0985 1.0985",
  "c5.translate -250 -100",
  "c2.clearRect 0 0 400 200",
  "c2.drawImage <c1> 0 0 400 200",
  "c2.save",
  "c2.globalCompositeOperation= destination-in",
  "c2.createLinearGradient 0 0 400 0",
  "c2.createLinearGradient#12.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#12.addColorStop 0.06 rgba(0,0,0,1)",
  "c2.createLinearGradient#12.addColorStop 0.94 rgba(0,0,0,1)",
  "c2.createLinearGradient#12.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#12>",
  "c2.fillRect 0 0 400 200",
  "c2.createLinearGradient 0 0 0 200",
  "c2.createLinearGradient#13.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#13.addColorStop 0.12 rgba(0,0,0,1)",
  "c2.createLinearGradient#13.addColorStop 0.88 rgba(0,0,0,1)",
  "c2.createLinearGradient#13.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#13>",
  "c2.fillRect 0 0 400 200",
  "c2.restore",
  "c5.drawImage <c2> 0 0 400 200 40 20 320 160",
  "c5.restore",
  "c5.createLinearGradient 0 0 400 0",
  "c5.createLinearGradient#14.addColorStop 0 rgba(0,0,0,0)",
  "c5.createLinearGradient#14.addColorStop 0.4375 rgba(0,0,0,0)",
  "c5.createLinearGradient#14.addColorStop 0.5625 rgba(0,0,0,1)",
  "c5.createLinearGradient#14.addColorStop 0.6875 rgba(0,0,0,1)",
  "c5.createLinearGradient#14.addColorStop 0.8125 rgba(0,0,0,0)",
  "c5.createLinearGradient#14.addColorStop 1 rgba(0,0,0,0)",
  "c5.save",
  "c5.globalCompositeOperation= destination-in",
  "c5.fillStyle= <c5.createLinearGradient#14>",
  "c5.fillRect 0 0 400 200",
  "c5.restore",
  "c4.save",
  "c4.globalCompositeOperation= lighter",
  "c4.drawImage <c5> 0 0",
  "c4.restore",
  "c5.clearRect 0 0 400 200",
  "c5.save",
  "c5.translate 350 100",
  "c5.scale 1.0356 1.0356",
  "c5.translate -350 -100",
  "c2.clearRect 0 0 400 200",
  "c2.drawImage <c1> 0 0 400 200",
  "c2.save",
  "c2.globalCompositeOperation= destination-in",
  "c2.createLinearGradient 0 0 400 0",
  "c2.createLinearGradient#15.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#15.addColorStop 0.06 rgba(0,0,0,1)",
  "c2.createLinearGradient#15.addColorStop 0.94 rgba(0,0,0,1)",
  "c2.createLinearGradient#15.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#15>",
  "c2.fillRect 0 0 400 200",
  "c2.createLinearGradient 0 0 0 200",
  "c2.createLinearGradient#16.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#16.addColorStop 0.12 rgba(0,0,0,1)",
  "c2.createLinearGradient#16.addColorStop 0.88 rgba(0,0,0,1)",
  "c2.createLinearGradient#16.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#16>",
  "c2.fillRect 0 0 400 200",
  "c2.restore",
  "c5.drawImage <c2> 0 0 400 200 40 20 320 160",
  "c5.restore",
  "c5.createLinearGradient 0 0 400 0",
  "c5.createLinearGradient#17.addColorStop 0 rgba(0,0,0,0)",
  "c5.createLinearGradient#17.addColorStop 0.6875 rgba(0,0,0,0)",
  "c5.createLinearGradient#17.addColorStop 0.8125 rgba(0,0,0,1)",
  "c5.createLinearGradient#17.addColorStop 1 rgba(0,0,0,1)",
  "c5.save",
  "c5.globalCompositeOperation= destination-in",
  "c5.fillStyle= <c5.createLinearGradient#17>",
  "c5.fillRect 0 0 400 200",
  "c5.restore",
  "c4.save",
  "c4.globalCompositeOperation= lighter",
  "c4.drawImage <c5> 0 0",
  "c4.restore",
  "main.drawImage <c4> 0 0",
  "mim.drawImages <main.ctx> {"behindVisualizer":false}",
  "video.drawVideos <main.ctx>",
  "text.draw <main.ctx> 400 200",
  "audioFx.render <main.ctx> 400 200 {"fx":1}",
  "beatDrop.render <main.ctx> 400 200 {"bd":1}",
  "ticker.render <main.ctx> 400 200 {"tk":1}",
  "marker.render <main.ctx> 400 200 live",
  "cm.drawFadedTextMarkers <main.ctx>",
  "cm.drawInteractiveElements <main.ctx>",
  "cm.drawWorkspaceOutline <main.ctx>",
  "cm.drawTextSelectionRect <main.ctx>",
  "cm.drawTextPositionPreview <main.ctx>",
  "grid.drawGrid <main.ctx>",
  "--- frame 3",
  "raf",
  "player.notifyFrame",
  "main.clearRect 0 0 400 200",
  "updateGlobalAudioData u8[8:1220] 8",
  "c1.clearRect 0 0 400 200",
  "c1.save",
  "c1.globalAlpha= 0.7",
  "viz.bars.draw <c1.ctx> u8[8:1220] 8 400 200 #ff0000 0.9 null undef {"enabled":false,"strength":50} 16",
  "store.markWorking bars",
  "c1.restore",
  "cm.drawScene <main.ctx>",
  "mim.drawImages <main.ctx> {"behindVisualizer":true}",
  "c4.clearRect 0 0 400 200",
  "c5.clearRect 0 0 400 200",
  "c5.save",
  "c5.translate 50 100",
  "c5.scale 1.1258 1.1258",
  "c5.translate -50 -100",
  "c2.clearRect 0 0 400 200",
  "c2.drawImage <c1> 0 0 400 200",
  "c2.save",
  "c2.globalCompositeOperation= destination-in",
  "c2.createLinearGradient 0 0 400 0",
  "c2.createLinearGradient#18.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#18.addColorStop 0.06 rgba(0,0,0,1)",
  "c2.createLinearGradient#18.addColorStop 0.94 rgba(0,0,0,1)",
  "c2.createLinearGradient#18.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#18>",
  "c2.fillRect 0 0 400 200",
  "c2.createLinearGradient 0 0 0 200",
  "c2.createLinearGradient#19.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#19.addColorStop 0.12 rgba(0,0,0,1)",
  "c2.createLinearGradient#19.addColorStop 0.88 rgba(0,0,0,1)",
  "c2.createLinearGradient#19.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#19>",
  "c2.fillRect 0 0 400 200",
  "c2.restore",
  "c5.drawImage <c2> 0 0 400 200 40 20 320 160",
  "c5.restore",
  "c5.createLinearGradient 0 0 400 0",
  "c5.createLinearGradient#20.addColorStop 0 rgba(0,0,0,1)",
  "c5.createLinearGradient#20.addColorStop 0.1875 rgba(0,0,0,1)",
  "c5.createLinearGradient#20.addColorStop 0.3125 rgba(0,0,0,0)",
  "c5.createLinearGradient#20.addColorStop 1 rgba(0,0,0,0)",
  "c5.save",
  "c5.globalCompositeOperation= destination-in",
  "c5.fillStyle= <c5.createLinearGradient#20>",
  "c5.fillRect 0 0 400 200",
  "c5.restore",
  "c4.save",
  "c4.globalCompositeOperation= lighter",
  "c4.drawImage <c5> 0 0",
  "c4.restore",
  "c5.clearRect 0 0 400 200",
  "c5.save",
  "c5.translate 150 100",
  "c5.scale 1 1",
  "c5.translate -150 -100",
  "c2.clearRect 0 0 400 200",
  "c2.drawImage <c1> 0 0 400 200",
  "c2.save",
  "c2.globalCompositeOperation= destination-in",
  "c2.createLinearGradient 0 0 400 0",
  "c2.createLinearGradient#21.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#21.addColorStop 0.06 rgba(0,0,0,1)",
  "c2.createLinearGradient#21.addColorStop 0.94 rgba(0,0,0,1)",
  "c2.createLinearGradient#21.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#21>",
  "c2.fillRect 0 0 400 200",
  "c2.createLinearGradient 0 0 0 200",
  "c2.createLinearGradient#22.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#22.addColorStop 0.12 rgba(0,0,0,1)",
  "c2.createLinearGradient#22.addColorStop 0.88 rgba(0,0,0,1)",
  "c2.createLinearGradient#22.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#22>",
  "c2.fillRect 0 0 400 200",
  "c2.restore",
  "c5.drawImage <c2> 0 0 400 200 40 20 320 160",
  "c5.restore",
  "c5.createLinearGradient 0 0 400 0",
  "c5.createLinearGradient#23.addColorStop 0 rgba(0,0,0,0)",
  "c5.createLinearGradient#23.addColorStop 0.1875 rgba(0,0,0,0)",
  "c5.createLinearGradient#23.addColorStop 0.3125 rgba(0,0,0,1)",
  "c5.createLinearGradient#23.addColorStop 0.4375 rgba(0,0,0,1)",
  "c5.createLinearGradient#23.addColorStop 0.5625 rgba(0,0,0,0)",
  "c5.createLinearGradient#23.addColorStop 1 rgba(0,0,0,0)",
  "c5.save",
  "c5.globalCompositeOperation= destination-in",
  "c5.fillStyle= <c5.createLinearGradient#23>",
  "c5.fillRect 0 0 400 200",
  "c5.restore",
  "c4.save",
  "c4.globalCompositeOperation= lighter",
  "c4.drawImage <c5> 0 0",
  "c4.restore",
  "c5.clearRect 0 0 400 200",
  "c5.save",
  "c5.translate 250 100",
  "c5.scale 1.1969 1.1969",
  "c5.translate -250 -100",
  "c2.clearRect 0 0 400 200",
  "c2.drawImage <c1> 0 0 400 200",
  "c2.save",
  "c2.globalCompositeOperation= destination-in",
  "c2.createLinearGradient 0 0 400 0",
  "c2.createLinearGradient#24.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#24.addColorStop 0.06 rgba(0,0,0,1)",
  "c2.createLinearGradient#24.addColorStop 0.94 rgba(0,0,0,1)",
  "c2.createLinearGradient#24.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#24>",
  "c2.fillRect 0 0 400 200",
  "c2.createLinearGradient 0 0 0 200",
  "c2.createLinearGradient#25.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#25.addColorStop 0.12 rgba(0,0,0,1)",
  "c2.createLinearGradient#25.addColorStop 0.88 rgba(0,0,0,1)",
  "c2.createLinearGradient#25.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#25>",
  "c2.fillRect 0 0 400 200",
  "c2.restore",
  "c5.drawImage <c2> 0 0 400 200 40 20 320 160",
  "c5.restore",
  "c5.createLinearGradient 0 0 400 0",
  "c5.createLinearGradient#26.addColorStop 0 rgba(0,0,0,0)",
  "c5.createLinearGradient#26.addColorStop 0.4375 rgba(0,0,0,0)",
  "c5.createLinearGradient#26.addColorStop 0.5625 rgba(0,0,0,1)",
  "c5.createLinearGradient#26.addColorStop 0.6875 rgba(0,0,0,1)",
  "c5.createLinearGradient#26.addColorStop 0.8125 rgba(0,0,0,0)",
  "c5.createLinearGradient#26.addColorStop 1 rgba(0,0,0,0)",
  "c5.save",
  "c5.globalCompositeOperation= destination-in",
  "c5.fillStyle= <c5.createLinearGradient#26>",
  "c5.fillRect 0 0 400 200",
  "c5.restore",
  "c4.save",
  "c4.globalCompositeOperation= lighter",
  "c4.drawImage <c5> 0 0",
  "c4.restore",
  "c5.clearRect 0 0 400 200",
  "c5.save",
  "c5.translate 350 100",
  "c5.scale 1.0711 1.0711",
  "c5.translate -350 -100",
  "c2.clearRect 0 0 400 200",
  "c2.drawImage <c1> 0 0 400 200",
  "c2.save",
  "c2.globalCompositeOperation= destination-in",
  "c2.createLinearGradient 0 0 400 0",
  "c2.createLinearGradient#27.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#27.addColorStop 0.06 rgba(0,0,0,1)",
  "c2.createLinearGradient#27.addColorStop 0.94 rgba(0,0,0,1)",
  "c2.createLinearGradient#27.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#27>",
  "c2.fillRect 0 0 400 200",
  "c2.createLinearGradient 0 0 0 200",
  "c2.createLinearGradient#28.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#28.addColorStop 0.12 rgba(0,0,0,1)",
  "c2.createLinearGradient#28.addColorStop 0.88 rgba(0,0,0,1)",
  "c2.createLinearGradient#28.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#28>",
  "c2.fillRect 0 0 400 200",
  "c2.restore",
  "c5.drawImage <c2> 0 0 400 200 40 20 320 160",
  "c5.restore",
  "c5.createLinearGradient 0 0 400 0",
  "c5.createLinearGradient#29.addColorStop 0 rgba(0,0,0,0)",
  "c5.createLinearGradient#29.addColorStop 0.6875 rgba(0,0,0,0)",
  "c5.createLinearGradient#29.addColorStop 0.8125 rgba(0,0,0,1)",
  "c5.createLinearGradient#29.addColorStop 1 rgba(0,0,0,1)",
  "c5.save",
  "c5.globalCompositeOperation= destination-in",
  "c5.fillStyle= <c5.createLinearGradient#29>",
  "c5.fillRect 0 0 400 200",
  "c5.restore",
  "c4.save",
  "c4.globalCompositeOperation= lighter",
  "c4.drawImage <c5> 0 0",
  "c4.restore",
  "main.drawImage <c4> 0 0",
  "mim.drawImages <main.ctx> {"behindVisualizer":false}",
  "video.drawVideos <main.ctx>",
  "text.draw <main.ctx> 400 200",
  "audioFx.render <main.ctx> 400 200 {"fx":1}",
  "beatDrop.render <main.ctx> 400 200 {"bd":1}",
  "ticker.render <main.ctx> 400 200 {"tk":1}",
  "marker.render <main.ctx> 400 200 live",
  "cm.drawFadedTextMarkers <main.ctx>",
  "cm.drawInteractiveElements <main.ctx>",
  "cm.drawWorkspaceOutline <main.ctx>",
  "cm.drawTextSelectionRect <main.ctx>",
  "cm.drawTextPositionPreview <main.ctx>",
  "grid.drawGrid <main.ctx>",
]
`;

exports[`useRenderLoop – Charakterisierung > Einzel-Visualizer (Main-Thread): Init, Beat-Punch, Post-FX, Reaktionsquelle 1`] = `
[
  "--- frame 1",
  "raf",
  "player.notifyFrame",
  "main.clearRect 0 0 400 200",
  "updateGlobalAudioData u8[8:724] 8",
  "worker.init 400 200",
  "worker.cleanupState",
  "viz.bars.init 400 200",
  "worker.resize 400 200",
  "c1.clearRect 0 0 400 200",
  "c1.save",
  "c1.globalAlpha= 0.7",
  "viz.bars.draw <c1.ctx> u8[8:716] 8 400 200 #ff0000 0.9 null undef {"enabled":false,"strength":50} 16.6667",
  "store.markWorking bars",
  "c1.restore",
  "postfx.create proc1 400 200",
  "proc1.apply <c1> {"enabled":true,"bloom":0.5} 1",
  "cm.drawScene <main.ctx>",
  "mim.drawImages <main.ctx> {"behindVisualizer":true}",
  "main.save",
  "main.translate 200 100",
  "main.scale 1.048 1.048",
  "main.translate -200 -100",
  "c2.clearRect 0 0 400 200",
  "c2.drawImage <c1> 0 0 400 200",
  "c2.save",
  "c2.globalCompositeOperation= destination-in",
  "c2.createLinearGradient 0 0 400 0",
  "c2.createLinearGradient#3.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#3.addColorStop 0.06 rgba(0,0,0,1)",
  "c2.createLinearGradient#3.addColorStop 0.94 rgba(0,0,0,1)",
  "c2.createLinearGradient#3.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#3>",
  "c2.fillRect 0 0 400 200",
  "c2.createLinearGradient 0 0 0 200",
  "c2.createLinearGradient#4.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#4.addColorStop 0.12 rgba(0,0,0,1)",
  "c2.createLinearGradient#4.addColorStop 0.88 rgba(0,0,0,1)",
  "c2.createLinearGradient#4.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#4>",
  "c2.fillRect 0 0 400 200",
  "c2.restore",
  "main.drawImage <c2> 0 0 400 200 40 20 320 160",
  "main.restore",
  "mim.drawImages <main.ctx> {"behindVisualizer":false}",
  "video.drawVideos <main.ctx>",
  "text.draw <main.ctx> 400 200",
  "audioFx.render <main.ctx> 400 200 {"fx":1}",
  "beatDrop.render <main.ctx> 400 200 {"bd":1}",
  "ticker.render <main.ctx> 400 200 {"tk":1}",
  "marker.render <main.ctx> 400 200 live",
  "cm.drawFadedTextMarkers <main.ctx>",
  "cm.drawInteractiveElements <main.ctx>",
  "cm.drawWorkspaceOutline <main.ctx>",
  "cm.drawTextSelectionRect <main.ctx>",
  "cm.drawTextPositionPreview <main.ctx>",
  "grid.drawGrid <main.ctx>",
  "--- frame 2",
  "raf",
  "player.notifyFrame",
  "main.clearRect 0 0 400 200",
  "updateGlobalAudioData u8[8:972] 8",
  "c1.clearRect 0 0 400 200",
  "c1.save",
  "c1.globalAlpha= 0.7",
  "viz.bars.draw <c1.ctx> u8[8:964] 8 400 200 #ff0000 0.9 null undef {"enabled":false,"strength":50} 16",
  "store.markWorking bars",
  "c1.restore",
  "proc1.apply <c1> {"enabled":true,"bloom":0.5} 1",
  "cm.drawScene <main.ctx>",
  "mim.drawImages <main.ctx> {"behindVisualizer":true}",
  "main.save",
  "main.translate 200 100",
  "main.scale 1.096 1.096",
  "main.translate -200 -100",
  "c2.clearRect 0 0 400 200",
  "c2.drawImage <c1> 0 0 400 200",
  "c2.save",
  "c2.globalCompositeOperation= destination-in",
  "c2.createLinearGradient 0 0 400 0",
  "c2.createLinearGradient#5.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#5.addColorStop 0.06 rgba(0,0,0,1)",
  "c2.createLinearGradient#5.addColorStop 0.94 rgba(0,0,0,1)",
  "c2.createLinearGradient#5.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#5>",
  "c2.fillRect 0 0 400 200",
  "c2.createLinearGradient 0 0 0 200",
  "c2.createLinearGradient#6.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#6.addColorStop 0.12 rgba(0,0,0,1)",
  "c2.createLinearGradient#6.addColorStop 0.88 rgba(0,0,0,1)",
  "c2.createLinearGradient#6.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#6>",
  "c2.fillRect 0 0 400 200",
  "c2.restore",
  "main.drawImage <c2> 0 0 400 200 40 20 320 160",
  "main.restore",
  "mim.drawImages <main.ctx> {"behindVisualizer":false}",
  "video.drawVideos <main.ctx>",
  "text.draw <main.ctx> 400 200",
  "audioFx.render <main.ctx> 400 200 {"fx":1}",
  "beatDrop.render <main.ctx> 400 200 {"bd":1}",
  "ticker.render <main.ctx> 400 200 {"tk":1}",
  "marker.render <main.ctx> 400 200 live",
  "cm.drawFadedTextMarkers <main.ctx>",
  "cm.drawInteractiveElements <main.ctx>",
  "cm.drawWorkspaceOutline <main.ctx>",
  "cm.drawTextSelectionRect <main.ctx>",
  "cm.drawTextPositionPreview <main.ctx>",
  "grid.drawGrid <main.ctx>",
  "--- frame 3",
  "raf",
  "player.notifyFrame",
  "main.clearRect 0 0 400 200",
  "updateGlobalAudioData u8[8:1220] 8",
  "c1.clearRect 0 0 400 200",
  "c1.save",
  "c1.globalAlpha= 0.7",
  "viz.bars.draw <c1.ctx> u8[8:1212] 8 400 200 #ff0000 0.9 null undef {"enabled":false,"strength":50} 16",
  "store.markWorking bars",
  "c1.restore",
  "proc1.apply <c1> {"enabled":true,"bloom":0.5} 1",
  "cm.drawScene <main.ctx>",
  "mim.drawImages <main.ctx> {"behindVisualizer":true}",
  "main.save",
  "main.translate 200 100",
  "main.scale 1.0816 1.0816",
  "main.translate -200 -100",
  "c2.clearRect 0 0 400 200",
  "c2.drawImage <c1> 0 0 400 200",
  "c2.save",
  "c2.globalCompositeOperation= destination-in",
  "c2.createLinearGradient 0 0 400 0",
  "c2.createLinearGradient#7.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#7.addColorStop 0.06 rgba(0,0,0,1)",
  "c2.createLinearGradient#7.addColorStop 0.94 rgba(0,0,0,1)",
  "c2.createLinearGradient#7.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#7>",
  "c2.fillRect 0 0 400 200",
  "c2.createLinearGradient 0 0 0 200",
  "c2.createLinearGradient#8.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#8.addColorStop 0.12 rgba(0,0,0,1)",
  "c2.createLinearGradient#8.addColorStop 0.88 rgba(0,0,0,1)",
  "c2.createLinearGradient#8.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#8>",
  "c2.fillRect 0 0 400 200",
  "c2.restore",
  "main.drawImage <c2> 0 0 400 200 40 20 320 160",
  "main.restore",
  "mim.drawImages <main.ctx> {"behindVisualizer":false}",
  "video.drawVideos <main.ctx>",
  "text.draw <main.ctx> 400 200",
  "audioFx.render <main.ctx> 400 200 {"fx":1}",
  "beatDrop.render <main.ctx> 400 200 {"bd":1}",
  "ticker.render <main.ctx> 400 200 {"tk":1}",
  "marker.render <main.ctx> 400 200 live",
  "cm.drawFadedTextMarkers <main.ctx>",
  "cm.drawInteractiveElements <main.ctx>",
  "cm.drawWorkspaceOutline <main.ctx>",
  "cm.drawTextSelectionRect <main.ctx>",
  "cm.drawTextPositionPreview <main.ctx>",
  "grid.drawGrid <main.ctx>",
]
`;

exports[`useRenderLoop – Charakterisierung > Fehler im Visualizer → Fallback 1`] = `
[
  "--- frame 1",
  "raf",
  "player.notifyFrame",
  "main.clearRect 0 0 400 200",
  "updateGlobalAudioData u8[8:724] 8",
  "worker.init 400 200",
  "worker.cleanupState",
  "viz.broken.init 400 200",
  "worker.resize 400 200",
  "c1.clearRect 0 0 400 200",
  "c1.save",
  "c1.globalAlpha= 0.7",
  "c1.fillStyle= #000",
  "c1.fillRect 0 0 400 200",
  "store.fallback",
  "c1.restore",
  "cm.drawScene <main.ctx>",
  "mim.drawImages <main.ctx> {"behindVisualizer":true}",
  "main.drawImage <c1> 0 0 400 200 40 20 320 160",
  "mim.drawImages <main.ctx> {"behindVisualizer":false}",
  "video.drawVideos <main.ctx>",
  "text.draw <main.ctx> 400 200",
  "audioFx.render <main.ctx> 400 200 {"fx":1}",
  "beatDrop.render <main.ctx> 400 200 {"bd":1}",
  "ticker.render <main.ctx> 400 200 {"tk":1}",
  "marker.render <main.ctx> 400 200 live",
  "cm.drawFadedTextMarkers <main.ctx>",
  "cm.drawInteractiveElements <main.ctx>",
  "cm.drawWorkspaceOutline <main.ctx>",
  "cm.drawTextSelectionRect <main.ctx>",
  "cm.drawTextPositionPreview <main.ctx>",
  "grid.drawGrid <main.ctx>",
]
`;

exports[`useRenderLoop – Charakterisierung > Mikrofon: eigener Analyser, AudioContext wird fortgesetzt 1`] = `
[
  "--- frame 1",
  "raf",
  "player.notifyFrame",
  "main.clearRect 0 0 400 200",
  "mic.resume",
  "updateGlobalAudioData u8[8:724] 8",
  "worker.init 400 200",
  "worker.cleanupState",
  "viz.bars.init 400 200",
  "worker.resize 400 200",
  "c1.clearRect 0 0 400 200",
  "c1.save",
  "c1.globalAlpha= 0.7",
  "viz.bars.draw <c1.ctx> u8[8:724] 8 400 200 #ff0000 0.9 null undef {"enabled":false,"strength":50} 16.6667",
  "store.markWorking bars",
  "c1.restore",
  "cm.drawScene <main.ctx>",
  "mim.drawImages <main.ctx> {"behindVisualizer":true}",
  "c2.clearRect 0 0 400 200",
  "c2.drawImage <c1> 0 0 400 200",
  "c2.save",
  "c2.globalCompositeOperation= destination-in",
  "c2.createLinearGradient 0 0 400 0",
  "c2.createLinearGradient#2.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#2.addColorStop 0.06 rgba(0,0,0,1)",
  "c2.createLinearGradient#2.addColorStop 0.94 rgba(0,0,0,1)",
  "c2.createLinearGradient#2.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#2>",
  "c2.fillRect 0 0 400 200",
  "c2.createLinearGradient 0 0 0 200",
  "c2.createLinearGradient#3.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#3.addColorStop 0.12 rgba(0,0,0,1)",
  "c2.createLinearGradient#3.addColorStop 0.88 rgba(0,0,0,1)",
  "c2.createLinearGradient#3.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#3>",
  "c2.fillRect 0 0 400 200",
  "c2.restore",
  "main.drawImage <c2> 0 0 400 200 40 20 320 160",
  "mim.drawImages <main.ctx> {"behindVisualizer":false}",
  "video.drawVideos <main.ctx>",
  "text.draw <main.ctx> 400 200",
  "audioFx.render <main.ctx> 400 200 {"fx":1}",
  "beatDrop.render <main.ctx> 400 200 {"bd":1}",
  "ticker.render <main.ctx> 400 200 {"tk":1}",
  "marker.render <main.ctx> 400 200 live",
  "cm.drawFadedTextMarkers <main.ctx>",
  "cm.drawInteractiveElements <main.ctx>",
  "cm.drawWorkspaceOutline <main.ctx>",
  "cm.drawTextSelectionRect <main.ctx>",
  "cm.drawTextPositionPreview <main.ctx>",
  "grid.drawGrid <main.ctx>",
]
`;

exports[`useRenderLoop – Charakterisierung > Multi-Layer: Caches, Layer-Effekte, Blend-Modi, Aufräumen 1`] = `
[
  "--- frame 1",
  "raf",
  "player.notifyFrame",
  "main.clearRect 0 0 400 200",
  "updateGlobalAudioData u8[8:724] 8",
  "viz.bars.init 400 200",
  "c2.clearRect 0 0 400 200",
  "c2.save",
  "c2.globalAlpha= 0.6",
  "viz.bars.draw <c2.ctx> u8[8:714] 8 400 200 #111 0.5 null undef {"enabled":false,"strength":50} 16.6667",
  "c2.restore",
  "postfx.create proc1 400 200",
  "proc1.apply <c2> {"enabled":true,"trails":0.3} 1",
  "viz.wave.init 400 200",
  "analyser.getTimeDomain",
  "c3.clearRect 0 0 400 200",
  "c3.save",
  "c3.globalAlpha= 1",
  "viz.wave.draw <c3.ctx> u8[8:1040] 8 400 200 #222 1 null {"enabled":true,"strength":90} {"enabled":false,"strength":50} 16.6667",
  "c3.restore",
  "c1.clearRect 0 0 400 200",
  "c1.save",
  "c1.globalCompositeOperation= screen",
  "c2.clearRect 0 0 400 200",
  "c2.drawImage <c2> 0 0 400 200",
  "c2.save",
  "c2.globalCompositeOperation= destination-in",
  "c2.createLinearGradient 0 0 400 0",
  "c2.createLinearGradient#4.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#4.addColorStop 0.06 rgba(0,0,0,1)",
  "c2.createLinearGradient#4.addColorStop 0.94 rgba(0,0,0,1)",
  "c2.createLinearGradient#4.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#4>",
  "c2.fillRect 0 0 400 200",
  "c2.createLinearGradient 0 0 0 200",
  "c2.createLinearGradient#5.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#5.addColorStop 0.12 rgba(0,0,0,1)",
  "c2.createLinearGradient#5.addColorStop 0.88 rgba(0,0,0,1)",
  "c2.createLinearGradient#5.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#5>",
  "c2.fillRect 0 0 400 200",
  "c2.restore",
  "c1.drawImage <c2> 0 0 400 200 -53.44 13.28 426.88 213.44",
  "c1.restore",
  "c1.save",
  "c1.globalCompositeOperation= source-over",
  "c1.drawImage <c3> 0 0 400 200 100 50 200 100",
  "c1.restore",
  "postfx.create proc2 400 200",
  "proc2.apply <c1> {"enabled":true} 1",
  "cm.drawScene <main.ctx>",
  "mim.drawImages <main.ctx> {"behindVisualizer":true}",
  "main.drawImage <c1> 0 0",
  "mim.drawImages <main.ctx> {"behindVisualizer":false}",
  "video.drawVideos <main.ctx>",
  "text.draw <main.ctx> 400 200",
  "audioFx.render <main.ctx> 400 200 {"fx":1}",
  "beatDrop.render <main.ctx> 400 200 {"bd":1}",
  "ticker.render <main.ctx> 400 200 {"tk":1}",
  "marker.render <main.ctx> 400 200 live",
  "cm.drawFadedTextMarkers <main.ctx>",
  "cm.drawInteractiveElements <main.ctx>",
  "cm.drawWorkspaceOutline <main.ctx>",
  "cm.drawTextSelectionRect <main.ctx>",
  "cm.drawTextPositionPreview <main.ctx>",
  "grid.drawGrid <main.ctx>",
  "--- frame 2",
  "raf",
  "player.notifyFrame",
  "main.clearRect 0 0 400 200",
  "updateGlobalAudioData u8[8:972] 8",
  "c2.clearRect 0 0 400 200",
  "c2.save",
  "c2.globalAlpha= 0.6",
  "viz.bars.draw <c2.ctx> u8[8:960] 8 400 200 #111 0.5 null undef {"enabled":false,"strength":50} 16",
  "c2.restore",
  "proc1.apply <c2> {"enabled":true,"trails":0.3} 1",
  "analyser.getTimeDomain",
  "c3.clearRect 0 0 400 200",
  "c3.save",
  "c3.globalAlpha= 1",
  "viz.wave.draw <c3.ctx> u8[8:1043] 8 400 200 #222 1 null {"enabled":true,"strength":90} {"enabled":false,"strength":50} 16",
  "c3.restore",
  "c1.clearRect 0 0 400 200",
  "c1.save",
  "c1.globalCompositeOperation= screen",
  "c2.clearRect 0 0 400 200",
  "c2.drawImage <c2> 0 0 400 200",
  "c2.save",
  "c2.globalCompositeOperation= destination-in",
  "c2.createLinearGradient 0 0 400 0",
  "c2.createLinearGradient#6.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#6.addColorStop 0.06 rgba(0,0,0,1)",
  "c2.createLinearGradient#6.addColorStop 0.94 rgba(0,0,0,1)",
  "c2.createLinearGradient#6.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#6>",
  "c2.fillRect 0 0 400 200",
  "c2.createLinearGradient 0 0 0 200",
  "c2.createLinearGradient#7.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#7.addColorStop 0.12 rgba(0,0,0,1)",
  "c2.createLinearGradient#7.addColorStop 0.88 rgba(0,0,0,1)",
  "c2.createLinearGradient#7.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#7>",
  "c2.fillRect 0 0 400 200",
  "c2.restore",
  "c1.drawImage <c2> 0 0 400 200 -51.424 14.288 422.848 211.424",
  "c1.restore",
  "c1.save",
  "c1.globalCompositeOperation= source-over",
  "c1.drawImage <c3> 0 0 400 200 100 50 200 100",
  "c1.restore",
  "proc2.apply <c1> {"enabled":true} 1",
  "cm.drawScene <main.ctx>",
  "mim.drawImages <main.ctx> {"behindVisualizer":true}",
  "main.drawImage <c1> 0 0",
  "mim.drawImages <main.ctx> {"behindVisualizer":false}",
  "video.drawVideos <main.ctx>",
  "text.draw <main.ctx> 400 200",
  "audioFx.render <main.ctx> 400 200 {"fx":1}",
  "beatDrop.render <main.ctx> 400 200 {"bd":1}",
  "ticker.render <main.ctx> 400 200 {"tk":1}",
  "marker.render <main.ctx> 400 200 live",
  "cm.drawFadedTextMarkers <main.ctx>",
  "cm.drawInteractiveElements <main.ctx>",
  "cm.drawWorkspaceOutline <main.ctx>",
  "cm.drawTextSelectionRect <main.ctx>",
  "cm.drawTextPositionPreview <main.ctx>",
  "grid.drawGrid <main.ctx>",
  "--- frame 3",
  "raf",
  "player.notifyFrame",
  "main.clearRect 0 0 400 200",
  "updateGlobalAudioData u8[8:1220] 8",
  "viz.bars.cleanup",
  "viz.wave.init 400 200",
  "analyser.getTimeDomain",
  "c2.clearRect 0 0 400 200",
  "c2.save",
  "c2.globalAlpha= 0.6",
  "viz.wave.draw <c2.ctx> u8[8:1035] 8 400 200 #111 0.5 null undef {"enabled":false,"strength":50} 16",
  "c2.restore",
  "proc1.apply <c2> {"enabled":true,"trails":0.3} 1",
  "c1.clearRect 0 0 400 200",
  "c1.save",
  "c1.globalCompositeOperation= screen",
  "c1.drawImage <c2> 0 0 400 200 -40 20 400 200",
  "c1.restore",
  "proc2.apply <c1> {"enabled":true} 1",
  "cm.drawScene <main.ctx>",
  "mim.drawImages <main.ctx> {"behindVisualizer":true}",
  "main.drawImage <c1> 0 0",
  "mim.drawImages <main.ctx> {"behindVisualizer":false}",
  "video.drawVideos <main.ctx>",
  "text.draw <main.ctx> 400 200",
  "audioFx.render <main.ctx> 400 200 {"fx":1}",
  "beatDrop.render <main.ctx> 400 200 {"bd":1}",
  "ticker.render <main.ctx> 400 200 {"tk":1}",
  "marker.render <main.ctx> 400 200 live",
  "cm.drawFadedTextMarkers <main.ctx>",
  "cm.drawInteractiveElements <main.ctx>",
  "cm.drawWorkspaceOutline <main.ctx>",
  "cm.drawTextSelectionRect <main.ctx>",
  "cm.drawTextPositionPreview <main.ctx>",
  "grid.drawGrid <main.ctx>",
]
`;

exports[`useRenderLoop – Charakterisierung > Screenshot mit Workspace-Format 1`] = `
[
  "--- frame 1",
  "raf",
  "player.notifyFrame",
  "main.clearRect 0 0 400 200",
  "updateGlobalAudioData u8[8:724] 8",
  "worker.init 400 200",
  "worker.cleanupState",
  "viz.bars.init 400 200",
  "worker.resize 400 200",
  "c1.clearRect 0 0 400 200",
  "c1.save",
  "c1.globalAlpha= 0.7",
  "viz.bars.draw <c1.ctx> u8[8:724] 8 400 200 #ff0000 0.9 null undef {"enabled":false,"strength":50} 16.6667",
  "store.markWorking bars",
  "c1.restore",
  "cm.drawScene <main.ctx>",
  "mim.drawImages <main.ctx> {"behindVisualizer":true}",
  "c2.clearRect 0 0 400 200",
  "c2.drawImage <c1> 0 0 400 200",
  "c2.save",
  "c2.globalCompositeOperation= destination-in",
  "c2.createLinearGradient 0 0 400 0",
  "c2.createLinearGradient#2.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#2.addColorStop 0.06 rgba(0,0,0,1)",
  "c2.createLinearGradient#2.addColorStop 0.94 rgba(0,0,0,1)",
  "c2.createLinearGradient#2.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#2>",
  "c2.fillRect 0 0 400 200",
  "c2.createLinearGradient 0 0 0 200",
  "c2.createLinearGradient#3.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#3.addColorStop 0.12 rgba(0,0,0,1)",
  "c2.createLinearGradient#3.addColorStop 0.88 rgba(0,0,0,1)",
  "c2.createLinearGradient#3.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#3>",
  "c2.fillRect 0 0 400 200",
  "c2.restore",
  "main.drawImage <c2> 0 0 400 200 40 20 320 160",
  "mim.drawImages <main.ctx> {"behindVisualizer":false}",
  "video.drawVideos <main.ctx>",
  "text.draw <main.ctx> 400 200",
  "audioFx.render <main.ctx> 400 200 {"fx":1}",
  "beatDrop.render <main.ctx> 400 200 {"bd":1}",
  "ticker.render <main.ctx> 400 200 {"tk":1}",
  "marker.render <main.ctx> 400 200 live",
  "cm.drawFadedTextMarkers <main.ctx>",
  "cm.drawInteractiveElements <main.ctx>",
  "cm.drawWorkspaceOutline <main.ctx>",
  "cm.drawTextSelectionRect <main.ctx>",
  "cm.drawTextPositionPreview <main.ctx>",
  "grid.drawGrid <main.ctx>",
  "c4.imageSmoothingEnabled= true",
  "c4.imageSmoothingQuality= high",
  "c5.clearRect 0 0 400 200",
  "cm.isRecording= true",
  "cm.drawScene <c5.ctx>",
  "cm.isRecording= false",
  "mim.drawImages <c5.ctx> {"behindVisualizer":true}",
  "c5.save",
  "c5.beginPath",
  "c5.rect 100 50 200 100",
  "c5.clip",
  "c6.clearRect 0 0 200 100",
  "c2.clearRect 0 0 400 200",
  "c2.drawImage <c1> 0 0 400 200",
  "c2.save",
  "c2.globalCompositeOperation= destination-in",
  "c2.createLinearGradient 0 0 400 0",
  "c2.createLinearGradient#7.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#7.addColorStop 0.06 rgba(0,0,0,1)",
  "c2.createLinearGradient#7.addColorStop 0.94 rgba(0,0,0,1)",
  "c2.createLinearGradient#7.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#7>",
  "c2.fillRect 0 0 400 200",
  "c2.createLinearGradient 0 0 0 200",
  "c2.createLinearGradient#8.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#8.addColorStop 0.12 rgba(0,0,0,1)",
  "c2.createLinearGradient#8.addColorStop 0.88 rgba(0,0,0,1)",
  "c2.createLinearGradient#8.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#8>",
  "c2.fillRect 0 0 400 200",
  "c2.restore",
  "c6.drawImage <c2> 0 0 400 200 -60 -30 320 160",
  "c5.drawImage <c6> 100 50",
  "c5.restore",
  "mim.drawImages <c5.ctx> {"behindVisualizer":false}",
  "video.drawVideos <c5.ctx>",
  "text.draw <c5.ctx> 400 200",
  "c4.clearRect 0 0 300 150",
  "c4.drawImage <c5> 100 50 200 100 0 0 300 150",
  "audioFx.render <c4.ctx> 300 150 {"fx":1}",
  "beatDrop.render <c4.ctx> 300 150 {"bd":1}",
  "ticker.render <c4.ctx> 300 150 {"tk":1}",
]
`;

exports[`useRenderLoop – Charakterisierung > Visualizer-Wechsel, Größenänderung, Zeitdaten, Portrait-Bild 1`] = `
[
  "--- frame 1",
  "raf",
  "player.notifyFrame",
  "main.clearRect 0 0 400 200",
  "updateGlobalAudioData u8[8:724] 8",
  "worker.init 400 200",
  "worker.cleanupState",
  "viz.bars.init 400 200",
  "worker.resize 400 200",
  "c1.clearRect 0 0 400 200",
  "c1.save",
  "c1.globalAlpha= 0.7",
  "viz.bars.draw <c1.ctx> u8[8:724] 8 400 200 #ff0000 0.9 null undef {"enabled":false,"strength":50} 16.6667",
  "store.markWorking bars",
  "c1.restore",
  "postfx.create proc1 400 200",
  "proc1.apply <c1> {"enabled":true} 1",
  "cm.drawScene <main.ctx>",
  "mim.drawImages <main.ctx> {"behindVisualizer":true}",
  "c2.clearRect 0 0 400 200",
  "c2.drawImage <c1> 0 0 400 200",
  "c2.save",
  "c2.globalCompositeOperation= destination-in",
  "c2.createLinearGradient 0 0 400 0",
  "c2.createLinearGradient#2.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#2.addColorStop 0.06 rgba(0,0,0,1)",
  "c2.createLinearGradient#2.addColorStop 0.94 rgba(0,0,0,1)",
  "c2.createLinearGradient#2.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#2>",
  "c2.fillRect 0 0 400 200",
  "c2.createLinearGradient 0 0 0 200",
  "c2.createLinearGradient#3.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#3.addColorStop 0.12 rgba(0,0,0,1)",
  "c2.createLinearGradient#3.addColorStop 0.88 rgba(0,0,0,1)",
  "c2.createLinearGradient#3.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#3>",
  "c2.fillRect 0 0 400 200",
  "c2.restore",
  "main.drawImage <c2> 0 0 400 200 40 20 320 160",
  "mim.drawImages <main.ctx> {"behindVisualizer":false}",
  "video.drawVideos <main.ctx>",
  "text.draw <main.ctx> 400 200",
  "audioFx.render <main.ctx> 400 200 {"fx":1}",
  "beatDrop.render <main.ctx> 400 200 {"bd":1}",
  "ticker.render <main.ctx> 400 200 {"tk":1}",
  "marker.render <main.ctx> 400 200 live",
  "cm.drawFadedTextMarkers <main.ctx>",
  "cm.drawInteractiveElements <main.ctx>",
  "cm.drawWorkspaceOutline <main.ctx>",
  "cm.drawTextSelectionRect <main.ctx>",
  "cm.drawTextPositionPreview <main.ctx>",
  "grid.drawGrid <main.ctx>",
  "--- frame 2",
  "raf",
  "player.notifyFrame",
  "main.clearRect 0 0 400 200",
  "updateGlobalAudioData u8[8:972] 8",
  "worker.cleanupState",
  "viz.bars.cleanup",
  "viz.wave.init 400 200",
  "proc1.clearHistory",
  "analyser.getTimeDomain",
  "c1.clearRect 0 0 400 200",
  "c1.save",
  "c1.globalAlpha= 0.7",
  "viz.wave.draw <c1.ctx> u8[8:1043] 8 400 200 #ff0000 0.9 null undef {"enabled":false,"strength":50} 16",
  "store.markWorking wave",
  "c1.restore",
  "proc1.apply <c1> {"enabled":true} 1",
  "cm.drawScene <main.ctx>",
  "mim.drawImages <main.ctx> {"behindVisualizer":true}",
  "main.drawImage <c1> 0 0 400 200 40 20 320 160",
  "mim.drawImages <main.ctx> {"behindVisualizer":false}",
  "video.drawVideos <main.ctx>",
  "text.draw <main.ctx> 400 200",
  "audioFx.render <main.ctx> 400 200 {"fx":1}",
  "beatDrop.render <main.ctx> 400 200 {"bd":1}",
  "ticker.render <main.ctx> 400 200 {"tk":1}",
  "marker.render <main.ctx> 400 200 live",
  "cm.drawFadedTextMarkers <main.ctx>",
  "cm.drawInteractiveElements <main.ctx>",
  "cm.drawWorkspaceOutline <main.ctx>",
  "cm.drawTextSelectionRect <main.ctx>",
  "cm.drawTextPositionPreview <main.ctx>",
  "grid.drawGrid <main.ctx>",
  "--- frame 3",
  "raf",
  "player.notifyFrame",
  "main.clearRect 0 0 500 200",
  "updateGlobalAudioData u8[8:1220] 8",
  "worker.cleanupState",
  "viz.wave.cleanup",
  "viz.wave.init 500 200",
  "worker.resize 500 200",
  "proc1.clearHistory",
  "analyser.getTimeDomain",
  "c4.clearRect 0 0 500 200",
  "c4.save",
  "c4.globalAlpha= 0.7",
  "viz.wave.draw <c4.ctx> u8[8:1041] 8 500 200 #ff0000 0.9 null undef {"enabled":false,"strength":50} 16",
  "store.markWorking wave",
  "c4.restore",
  "proc1.resize 500 200",
  "proc1.apply <c4> {"enabled":true} 1",
  "cm.drawScene <main.ctx>",
  "mim.drawImages <main.ctx> {"behindVisualizer":true}",
  "main.drawImage <c4> 0 0 500 200 50 20 400 160",
  "mim.drawImages <main.ctx> {"behindVisualizer":false}",
  "video.drawVideos <main.ctx>",
  "text.draw <main.ctx> 500 200",
  "audioFx.render <main.ctx> 500 200 {"fx":1}",
  "beatDrop.render <main.ctx> 500 200 {"bd":1}",
  "ticker.render <main.ctx> 500 200 {"tk":1}",
  "marker.render <main.ctx> 500 200 live",
  "cm.drawFadedTextMarkers <main.ctx>",
  "cm.drawInteractiveElements <main.ctx>",
  "cm.drawWorkspaceOutline <main.ctx>",
  "cm.drawTextSelectionRect <main.ctx>",
  "cm.drawTextPositionPreview <main.ctx>",
  "grid.drawGrid <main.ctx>",
  "--- frame 4",
  "raf",
  "player.notifyFrame",
  "main.clearRect 0 0 500 200",
  "updateGlobalAudioData u8[8:1468] 8",
  "worker.cleanupState",
  "viz.wave.cleanup",
  "viz.portrait.init 500 200",
  "proc1.clearHistory",
  "c4.clearRect 0 0 500 200",
  "c4.save",
  "c4.globalAlpha= 0.7",
  "viz.portrait.draw <c4.ctx> u8[8:1468] 8 500 200 #ff0000 0.9 <src:img7> undef {"enabled":false,"strength":50} 16",
  "store.markWorking portrait",
  "c4.restore",
  "proc1.apply <c4> {"enabled":true} 1",
  "cm.drawScene <main.ctx>",
  "mim.drawImages <main.ctx> {"behindVisualizer":true}",
  "main.drawImage <c4> 0 0 500 200 50 20 400 160",
  "mim.drawImages <main.ctx> {"behindVisualizer":false}",
  "video.drawVideos <main.ctx>",
  "text.draw <main.ctx> 500 200",
  "audioFx.render <main.ctx> 500 200 {"fx":1}",
  "beatDrop.render <main.ctx> 500 200 {"bd":1}",
  "ticker.render <main.ctx> 500 200 {"tk":1}",
  "marker.render <main.ctx> 500 200 live",
  "cm.drawFadedTextMarkers <main.ctx>",
  "cm.drawInteractiveElements <main.ctx>",
  "cm.drawWorkspaceOutline <main.ctx>",
  "cm.drawTextSelectionRect <main.ctx>",
  "cm.drawTextPositionPreview <main.ctx>",
  "grid.drawGrid <main.ctx>",
]
`;

exports[`useRenderLoop – Charakterisierung > Worker-Pfad: Frame-Nachricht, Bitmap, Portrait-Bild 1`] = `
[
  "--- frame 1",
  "raf",
  "player.notifyFrame",
  "main.clearRect 0 0 400 200",
  "updateGlobalAudioData u8[8:724] 8",
  "worker.init 400 200",
  "worker.cleanupState",
  "viz.bars.init 400 200",
  "worker.resize 400 200",
  "c1.clearRect 0 0 400 200",
  "c1.save",
  "c1.globalAlpha= 0.7",
  "viz.bars.draw <c1.ctx> u8[8:724] 8 400 200 #ff0000 0.9 null undef {"enabled":true,"strength":50} 16.6667",
  "store.markWorking bars",
  "c1.restore",
  "cm.drawScene <main.ctx>",
  "mim.drawImages <main.ctx> {"behindVisualizer":true}",
  "c2.clearRect 0 0 400 200",
  "c2.drawImage <c1> 0 0 400 200",
  "c2.save",
  "c2.globalCompositeOperation= destination-in",
  "c2.createLinearGradient 0 0 400 0",
  "c2.createLinearGradient#2.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#2.addColorStop 0.06 rgba(0,0,0,1)",
  "c2.createLinearGradient#2.addColorStop 0.94 rgba(0,0,0,1)",
  "c2.createLinearGradient#2.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#2>",
  "c2.fillRect 0 0 400 200",
  "c2.createLinearGradient 0 0 0 200",
  "c2.createLinearGradient#3.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#3.addColorStop 0.12 rgba(0,0,0,1)",
  "c2.createLinearGradient#3.addColorStop 0.88 rgba(0,0,0,1)",
  "c2.createLinearGradient#3.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#3>",
  "c2.fillRect 0 0 400 200",
  "c2.restore",
  "main.drawImage <c2> 0 0 400 200 40 20 320 160",
  "mim.drawImages <main.ctx> {"behindVisualizer":false}",
  "video.drawVideos <main.ctx>",
  "text.draw <main.ctx> 400 200",
  "audioFx.render <main.ctx> 400 200 {"fx":1}",
  "beatDrop.render <main.ctx> 400 200 {"bd":1}",
  "ticker.render <main.ctx> 400 200 {"tk":1}",
  "marker.render <main.ctx> 400 200 live",
  "cm.drawFadedTextMarkers <main.ctx>",
  "cm.drawInteractiveElements <main.ctx>",
  "cm.drawWorkspaceOutline <main.ctx>",
  "cm.drawTextSelectionRect <main.ctx>",
  "cm.drawTextPositionPreview <main.ctx>",
  "grid.drawGrid <main.ctx>",
  "--- frame 2",
  "raf",
  "player.notifyFrame",
  "main.clearRect 0 0 400 200",
  "updateGlobalAudioData u8[8:972] 8",
  "worker.renderFrame {"visualizerId":"bars","audioData":"u8[8:972]","bufferLength":8,"color":"#ff0000","opacity":0.9,"colorOpacity":0.7,"postFx":{"enabled":false},"quality":1,"onsetFx":{"enabled":true,"strength":50},"onsetData":{"bass":1,"mid":0.25,"treble":0.1,"all":0},"dtMs":16}",
  "cm.drawScene <main.ctx>",
  "mim.drawImages <main.ctx> {"behindVisualizer":true}",
  "mim.drawImages <main.ctx> {"behindVisualizer":false}",
  "video.drawVideos <main.ctx>",
  "text.draw <main.ctx> 400 200",
  "audioFx.render <main.ctx> 400 200 {"fx":1}",
  "beatDrop.render <main.ctx> 400 200 {"bd":1}",
  "ticker.render <main.ctx> 400 200 {"tk":1}",
  "marker.render <main.ctx> 400 200 live",
  "cm.drawFadedTextMarkers <main.ctx>",
  "cm.drawInteractiveElements <main.ctx>",
  "cm.drawWorkspaceOutline <main.ctx>",
  "cm.drawTextSelectionRect <main.ctx>",
  "cm.drawTextPositionPreview <main.ctx>",
  "grid.drawGrid <main.ctx>",
  "store.markWorking bars",
  "--- frame 3",
  "raf",
  "player.notifyFrame",
  "main.clearRect 0 0 400 200",
  "updateGlobalAudioData u8[8:1220] 8",
  "worker.renderFrame {"visualizerId":"bars","audioData":"u8[8:1220]","bufferLength":8,"color":"#ff0000","opacity":0.9,"colorOpacity":0.7,"postFx":{"enabled":false},"quality":1,"onsetFx":{"enabled":true,"strength":50},"onsetData":{"bass":0,"mid":0.25,"treble":0.1,"all":0.8},"dtMs":16}",
  "cm.drawScene <main.ctx>",
  "mim.drawImages <main.ctx> {"behindVisualizer":true}",
  "c2.clearRect 0 0 400 200",
  "c2.drawImage <bitmap1> 0 0 400 200",
  "c2.save",
  "c2.globalCompositeOperation= destination-in",
  "c2.createLinearGradient 0 0 400 0",
  "c2.createLinearGradient#4.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#4.addColorStop 0.06 rgba(0,0,0,1)",
  "c2.createLinearGradient#4.addColorStop 0.94 rgba(0,0,0,1)",
  "c2.createLinearGradient#4.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#4>",
  "c2.fillRect 0 0 400 200",
  "c2.createLinearGradient 0 0 0 200",
  "c2.createLinearGradient#5.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#5.addColorStop 0.12 rgba(0,0,0,1)",
  "c2.createLinearGradient#5.addColorStop 0.88 rgba(0,0,0,1)",
  "c2.createLinearGradient#5.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#5>",
  "c2.fillRect 0 0 400 200",
  "c2.restore",
  "main.drawImage <c2> 0 0 400 200 40 20 320 160",
  "mim.drawImages <main.ctx> {"behindVisualizer":false}",
  "video.drawVideos <main.ctx>",
  "text.draw <main.ctx> 400 200",
  "audioFx.render <main.ctx> 400 200 {"fx":1}",
  "beatDrop.render <main.ctx> 400 200 {"bd":1}",
  "ticker.render <main.ctx> 400 200 {"tk":1}",
  "marker.render <main.ctx> 400 200 live",
  "cm.drawFadedTextMarkers <main.ctx>",
  "cm.drawInteractiveElements <main.ctx>",
  "cm.drawWorkspaceOutline <main.ctx>",
  "cm.drawTextSelectionRect <main.ctx>",
  "cm.drawTextPositionPreview <main.ctx>",
  "grid.drawGrid <main.ctx>",
  "bitmap1.close",
  "store.markWorking bars",
  "--- frame 4",
  "raf",
  "player.notifyFrame",
  "main.clearRect 0 0 400 200",
  "updateGlobalAudioData u8[8:1468] 8",
  "worker.cleanupState",
  "worker.renderFrame {"visualizerId":"portrait","audioData":"u8[8:1468]","bufferLength":8,"color":"#ff0000","opacity":0.9,"colorOpacity":0.7,"postFx":{"enabled":false},"quality":1,"onsetFx":{"enabled":true,"strength":50},"onsetData":{"bass":0.5,"mid":0.25,"treble":0.1,"all":0},"dtMs":16}",
  "cm.drawScene <main.ctx>",
  "mim.drawImages <main.ctx> {"behindVisualizer":true}",
  "main.drawImage <bitmap2> 0 0 400 200 40 20 320 160",
  "mim.drawImages <main.ctx> {"behindVisualizer":false}",
  "video.drawVideos <main.ctx>",
  "text.draw <main.ctx> 400 200",
  "audioFx.render <main.ctx> 400 200 {"fx":1}",
  "beatDrop.render <main.ctx> 400 200 {"bd":1}",
  "ticker.render <main.ctx> 400 200 {"tk":1}",
  "marker.render <main.ctx> 400 200 live",
  "cm.drawFadedTextMarkers <main.ctx>",
  "cm.drawInteractiveElements <main.ctx>",
  "cm.drawWorkspaceOutline <main.ctx>",
  "cm.drawTextSelectionRect <main.ctx>",
  "cm.drawTextPositionPreview <main.ctx>",
  "grid.drawGrid <main.ctx>",
  "worker.setImage <bmp:src:p1>",
  "--- frame 5",
  "raf",
  "player.notifyFrame",
  "main.clearRect 0 0 400 200",
  "updateGlobalAudioData u8[8:1204] 8",
  "worker.renderFrame {"visualizerId":"portrait","audioData":"u8[8:1204]","bufferLength":8,"color":"#ff0000","opacity":0.9,"colorOpacity":0.7,"postFx":{"enabled":false},"quality":1,"onsetFx":{"enabled":true,"strength":50},"onsetData":{"bass":1,"mid":0.25,"treble":0.1,"all":0.8},"dtMs":16}",
  "cm.drawScene <main.ctx>",
  "mim.drawImages <main.ctx> {"behindVisualizer":true}",
  "main.drawImage <bitmap2> 0 0 400 200 40 20 320 160",
  "mim.drawImages <main.ctx> {"behindVisualizer":false}",
  "video.drawVideos <main.ctx>",
  "text.draw <main.ctx> 400 200",
  "audioFx.render <main.ctx> 400 200 {"fx":1}",
  "beatDrop.render <main.ctx> 400 200 {"bd":1}",
  "ticker.render <main.ctx> 400 200 {"tk":1}",
  "marker.render <main.ctx> 400 200 live",
  "cm.drawFadedTextMarkers <main.ctx>",
  "cm.drawInteractiveElements <main.ctx>",
  "cm.drawWorkspaceOutline <main.ctx>",
  "cm.drawTextSelectionRect <main.ctx>",
  "cm.drawTextPositionPreview <main.ctx>",
  "grid.drawGrid <main.ctx>",
  "cancelRaf 1",
  "bitmap2.close",
]
`;

exports[`useRenderLoop – Charakterisierung > ohne Analyser zeichnet keinen Visualizer 1`] = `
[
  "--- frame 1",
  "raf",
  "player.notifyFrame",
  "main.clearRect 0 0 400 200",
  "cm.drawScene <main.ctx>",
  "mim.drawImages <main.ctx> {"behindVisualizer":true}",
  "mim.drawImages <main.ctx> {"behindVisualizer":false}",
  "video.drawVideos <main.ctx>",
  "text.draw <main.ctx> 400 200",
  "audioFx.render <main.ctx> 400 200 {"fx":1}",
  "beatDrop.render <main.ctx> 400 200 {"bd":1}",
  "ticker.render <main.ctx> 400 200 {"tk":1}",
  "marker.render <main.ctx> 400 200 live",
  "cm.drawFadedTextMarkers <main.ctx>",
  "cm.drawInteractiveElements <main.ctx>",
  "cm.drawWorkspaceOutline <main.ctx>",
  "cm.drawTextSelectionRect <main.ctx>",
  "cm.drawTextPositionPreview <main.ctx>",
  "grid.drawGrid <main.ctx>",
]
`;

exports[`useRenderLoop – Charakterisierung > ohne Wiedergabe: nur Szene, Effekte und Editor-Elemente 1`] = `
[
  "--- frame 1",
  "raf",
  "player.notifyFrame",
  "main.clearRect 0 0 400 200",
  "cm.drawScene <main.ctx>",
  "mim.drawImages <main.ctx> {"behindVisualizer":true}",
  "mim.drawImages <main.ctx> {"behindVisualizer":false}",
  "video.drawVideos <main.ctx>",
  "text.draw <main.ctx> 400 200",
  "audioFx.render <main.ctx> 400 200 {"fx":1}",
  "beatDrop.render <main.ctx> 400 200 {"bd":1}",
  "ticker.render <main.ctx> 400 200 {"tk":1}",
  "marker.render <main.ctx> 400 200 live",
  "cm.drawFadedTextMarkers <main.ctx>",
  "cm.drawInteractiveElements <main.ctx>",
  "cm.drawWorkspaceOutline <main.ctx>",
  "cm.drawTextSelectionRect <main.ctx>",
  "cm.drawTextPositionPreview <main.ctx>",
  "grid.drawGrid <main.ctx>",
  "mim.drawInteractiveElements <main.ctx>",
]
`;

exports[`useRenderLoop – Charakterisierung > renderRecordingScene / renderScene / buildVisualizerCallback direkt 1`] = `
[
  "--- frame 1",
  "raf",
  "player.notifyFrame",
  "main.clearRect 0 0 400 200",
  "updateGlobalAudioData u8[8:724] 8",
  "worker.init 400 200",
  "worker.cleanupState",
  "viz.bars.init 400 200",
  "worker.resize 400 200",
  "c1.clearRect 0 0 400 200",
  "c1.save",
  "c1.globalAlpha= 0.7",
  "viz.bars.draw <c1.ctx> u8[8:724] 8 400 200 #ff0000 0.9 null undef {"enabled":false,"strength":50} 16.6667",
  "store.markWorking bars",
  "c1.restore",
  "cm.drawScene <main.ctx>",
  "mim.drawImages <main.ctx> {"behindVisualizer":true}",
  "c2.clearRect 0 0 400 200",
  "c2.drawImage <c1> 0 0 400 200",
  "c2.save",
  "c2.globalCompositeOperation= destination-in",
  "c2.createLinearGradient 0 0 400 0",
  "c2.createLinearGradient#2.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#2.addColorStop 0.06 rgba(0,0,0,1)",
  "c2.createLinearGradient#2.addColorStop 0.94 rgba(0,0,0,1)",
  "c2.createLinearGradient#2.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#2>",
  "c2.fillRect 0 0 400 200",
  "c2.createLinearGradient 0 0 0 200",
  "c2.createLinearGradient#3.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#3.addColorStop 0.12 rgba(0,0,0,1)",
  "c2.createLinearGradient#3.addColorStop 0.88 rgba(0,0,0,1)",
  "c2.createLinearGradient#3.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#3>",
  "c2.fillRect 0 0 400 200",
  "c2.restore",
  "main.drawImage <c2> 0 0 400 200 40 20 320 160",
  "mim.drawImages <main.ctx> {"behindVisualizer":false}",
  "video.drawVideos <main.ctx>",
  "text.draw <main.ctx> 400 200",
  "audioFx.render <main.ctx> 400 200 {"fx":1}",
  "beatDrop.render <main.ctx> 400 200 {"bd":1}",
  "ticker.render <main.ctx> 400 200 {"tk":1}",
  "marker.render <main.ctx> 400 200 live",
  "cm.drawFadedTextMarkers <main.ctx>",
  "cm.drawInteractiveElements <main.ctx>",
  "cm.drawWorkspaceOutline <main.ctx>",
  "cm.drawTextSelectionRect <main.ctx>",
  "cm.drawTextPositionPreview <main.ctx>",
  "grid.drawGrid <main.ctx>",
  "c4.clearRect 0 0 400 200",
  "cm.isRecording= true",
  "cm.drawScene <c4.ctx>",
  "cm.isRecording= false",
  "mim.drawImages <c4.ctx> {"behindVisualizer":true}",
  "c4.save",
  "c4.beginPath",
  "c4.rect 100 50 200 100",
  "c4.clip",
  "c5.clearRect 0 0 200 100",
  "c2.clearRect 0 0 400 200",
  "c2.drawImage <c1> 0 0 400 200",
  "c2.save",
  "c2.globalCompositeOperation= destination-in",
  "c2.createLinearGradient 0 0 400 0",
  "c2.createLinearGradient#6.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#6.addColorStop 0.06 rgba(0,0,0,1)",
  "c2.createLinearGradient#6.addColorStop 0.94 rgba(0,0,0,1)",
  "c2.createLinearGradient#6.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#6>",
  "c2.fillRect 0 0 400 200",
  "c2.createLinearGradient 0 0 0 200",
  "c2.createLinearGradient#7.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#7.addColorStop 0.12 rgba(0,0,0,1)",
  "c2.createLinearGradient#7.addColorStop 0.88 rgba(0,0,0,1)",
  "c2.createLinearGradient#7.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#7>",
  "c2.fillRect 0 0 400 200",
  "c2.restore",
  "c5.drawImage <c2> 0 0 400 200 -60 -30 320 160",
  "c4.drawImage <c5> 100 50",
  "c4.restore",
  "mim.drawImages <c4.ctx> {"behindVisualizer":false}",
  "video.drawVideos <c4.ctx>",
  "text.draw <c4.ctx> 400 200",
  "target.clearRect 0 0 200 100",
  "target.drawImage <c4> 100 50 200 100 0 0 200 100",
  "c4.clearRect 0 0 400 200",
  "cm.isRecording= true",
  "cm.drawScene <c4.ctx>",
  "cm.isRecording= false",
  "mim.drawImages <c4.ctx> {"behindVisualizer":true}",
  "mim.drawImages <c4.ctx> {"behindVisualizer":false}",
  "video.drawVideos <c4.ctx>",
  "text.draw <c4.ctx> 400 200",
  "target.clearRect 0 0 200 100",
  "target.drawImage <c4> 100 50 200 100 0 0 200 100",
  "cm.drawScene <target.ctx>",
  "mim.drawImages <target.ctx> {"behindVisualizer":true}",
  "c2.clearRect 0 0 400 200",
  "c2.drawImage <c1> 0 0 400 200",
  "c2.save",
  "c2.globalCompositeOperation= destination-in",
  "c2.createLinearGradient 0 0 400 0",
  "c2.createLinearGradient#8.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#8.addColorStop 0.06 rgba(0,0,0,1)",
  "c2.createLinearGradient#8.addColorStop 0.94 rgba(0,0,0,1)",
  "c2.createLinearGradient#8.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#8>",
  "c2.fillRect 0 0 400 200",
  "c2.createLinearGradient 0 0 0 200",
  "c2.createLinearGradient#9.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#9.addColorStop 0.12 rgba(0,0,0,1)",
  "c2.createLinearGradient#9.addColorStop 0.88 rgba(0,0,0,1)",
  "c2.createLinearGradient#9.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#9>",
  "c2.fillRect 0 0 400 200",
  "c2.restore",
  "target.drawImage <c2> 0 0 400 200 -60 -30 320 160",
  "mim.drawImages <target.ctx> {"behindVisualizer":false}",
  "video.drawVideos <target.ctx>",
  "text.draw <target.ctx> 200 100",
]
`;

exports[`useRenderLoop – Charakterisierung > stop und cleanup 1`] = `
[
  "--- frame 1",
  "raf",
  "player.notifyFrame",
  "main.clearRect 0 0 400 200",
  "updateGlobalAudioData u8[8:724] 8",
  "worker.init 400 200",
  "worker.cleanupState",
  "viz.bars.init 400 200",
  "worker.resize 400 200",
  "c1.clearRect 0 0 400 200",
  "c1.save",
  "c1.globalAlpha= 0.7",
  "viz.bars.draw <c1.ctx> u8[8:724] 8 400 200 #ff0000 0.9 null undef {"enabled":false,"strength":50} 16.6667",
  "store.markWorking bars",
  "c1.restore",
  "postfx.create proc1 400 200",
  "proc1.apply <c1> {"enabled":true} 1",
  "cm.drawScene <main.ctx>",
  "mim.drawImages <main.ctx> {"behindVisualizer":true}",
  "c2.clearRect 0 0 400 200",
  "c2.drawImage <c1> 0 0 400 200",
  "c2.save",
  "c2.globalCompositeOperation= destination-in",
  "c2.createLinearGradient 0 0 400 0",
  "c2.createLinearGradient#2.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#2.addColorStop 0.06 rgba(0,0,0,1)",
  "c2.createLinearGradient#2.addColorStop 0.94 rgba(0,0,0,1)",
  "c2.createLinearGradient#2.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#2>",
  "c2.fillRect 0 0 400 200",
  "c2.createLinearGradient 0 0 0 200",
  "c2.createLinearGradient#3.addColorStop 0 rgba(0,0,0,0)",
  "c2.createLinearGradient#3.addColorStop 0.12 rgba(0,0,0,1)",
  "c2.createLinearGradient#3.addColorStop 0.88 rgba(0,0,0,1)",
  "c2.createLinearGradient#3.addColorStop 1 rgba(0,0,0,0)",
  "c2.fillStyle= <c2.createLinearGradient#3>",
  "c2.fillRect 0 0 400 200",
  "c2.restore",
  "main.drawImage <c2> 0 0 400 200 40 20 320 160",
  "mim.drawImages <main.ctx> {"behindVisualizer":false}",
  "video.drawVideos <main.ctx>",
  "text.draw <main.ctx> 400 200",
  "audioFx.render <main.ctx> 400 200 {"fx":1}",
  "beatDrop.render <main.ctx> 400 200 {"bd":1}",
  "ticker.render <main.ctx> 400 200 {"tk":1}",
  "marker.render <main.ctx> 400 200 live",
  "cm.drawFadedTextMarkers <main.ctx>",
  "cm.drawInteractiveElements <main.ctx>",
  "cm.drawWorkspaceOutline <main.ctx>",
  "cm.drawTextSelectionRect <main.ctx>",
  "cm.drawTextPositionPreview <main.ctx>",
  "grid.drawGrid <main.ctx>",
  "cancelRaf 1",
  "proc1.dispose",
]
`;
